syntax = "proto3";

package krakend_lib;

option go_package = "github.com/krakend/examples/grpc/images/grpc/genlibs/lib";

message GeoPosition {
    float latitude = 1;
    float longitude = 2;
}
